--- a/node/env.tmpl
+++ b/node/env.tmpl
@@ -6,7 +6,5 @@ DB_NAME={{ .Env.DB_NAME }}
 DB_TYPE={{ .Env.DB_TYPE }}
 DATABASE_URL={{ .Env.DB_TYPE }}://{{ .Env.DB_USER }}:{{ .Env.DB_PASSWORD }}@{{ .Env.DB_HOST }}/{{ .Env.DB_NAME }}
 SERVER_PORT={{ .Env.SERVER_PORT }}
-RUST_ENV={{ .Env.RUST_ENV }}
-RUST_BACKTRACE={{ .Env.RUST_BACKTRACE }}
-RUST_LOG={{ .Env.RUST_LOG }}
+NODE_ENV={{ .Env.NODE_ENV }}
 APP_SECRET_KEY={{ .Env.APP_SECRET_KEY }}
