--- a/python/env.tmpl
+++ b/python/env.tmpl
@@ -7,3 +7,4 @@ DB_TYPE={{ .Env.DB_TYPE }}
 DATABASE_URL={{ .Env.DB_TYPE }}://{{ .Env.DB_USER }}:{{ .Env.DB_PASSWORD }}@{{ .Env.DB_HOST }}/{{ .Env.DB_NAME }}
 SERVER_PORT={{ .Env.SERVER_PORT }}
 PYTHON_ENV={{ .Env.PYTHON_ENV }}
+APP_SECRET_KEY={{ .Env.APP_SECRET_KEY }}
