--- a/python/env.tmpl
+++ b/python/env.tmpl
@@ -5,6 +5,7 @@ DB_PASSWORD={{ .Env.DB_PASSWORD }}
 DB_NAME={{ .Env.DB_NAME }}
 DB_TYPE={{ .Env.DB_TYPE }}
 DATABASE_URL={{ .Env.DB_TYPE }}://{{ .Env.DB_USER }}:{{ .Env.DB_PASSWORD }}@{{ .Env.DB_HOST }}/{{ .Env.DB_NAME }}
+REDIS_URL=redis://{{ .Env.REDIS_HOST }}
 SERVER_PORT={{ .Env.SERVER_PORT }}
 PYTHON_ENV={{ .Env.PYTHON_ENV }}
 APP_SECRET_KEY={{ .Env.APP_SECRET_KEY }}
