--- a/rust/env.tmpl
+++ b/rust/env.tmpl
@@ -5,8 +5,8 @@ DB_PASSWORD={{ .Env.DB_PASSWORD }}
 DB_NAME={{ .Env.DB_NAME }}
 DB_TYPE={{ .Env.DB_TYPE }}
 DATABASE_URL={{ .Env.DB_TYPE }}://{{ .Env.DB_USER }}:{{ .Env.DB_PASSWORD }}@{{ .Env.DB_HOST }}/{{ .Env.DB_NAME }}
+REDIS_URL=redis://{{ .Env.REDIS_HOST }}
 SERVER_PORT={{ .Env.SERVER_PORT }}
 RUST_ENV={{ .Env.RUST_ENV }}
-RUST_BACKTRACE={{ .Env.RUST_BACKTRACE }}
 RUST_LOG={{ .Env.RUST_LOG }}
 APP_SECRET_KEY={{ .Env.APP_SECRET_KEY }}
